k8s-example/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    name: production

---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    name: staging
